--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13563,7 +13563,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f525e82a9d0&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7fd1c817b950&gt;</pre>
 </div>
 
 </div>
@@ -13666,8 +13666,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f525e2cc590&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f525e2cc790&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7fd1c81e0d50&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7fd1c7c11790&gt;]</pre>
 </div>
 
 </div>
@@ -13716,8 +13716,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f525ea57e50&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f525ea64090&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7fd1c7c3b810&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7fd1c83a90d0&gt;]</pre>
 </div>
 
 </div>
