--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13563,7 +13563,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f4e5b21b790&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f2196bcefd0&gt;</pre>
 </div>
 
 </div>
@@ -13666,8 +13666,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f4e5aa15750&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f4e5aa15950&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f21966d55d0&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f21969ea710&gt;]</pre>
 </div>
 
 </div>
@@ -13716,8 +13716,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f4e5b1ae090&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f4e5b1ae290&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f2196deef50&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f2196e050d0&gt;]</pre>
 </div>
 
 </div>
