--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13563,7 +13563,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f485414ab10&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f92c72a7f50&gt;</pre>
 </div>
 
 </div>
@@ -13666,8 +13666,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f48531be510&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f48531be710&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f92c7068ed0&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f92c6ab1810&gt;]</pre>
 </div>
 
 </div>
@@ -13716,8 +13716,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f4853948e10&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f4853948fd0&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f92c6adfbd0&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f92c7249190&gt;]</pre>
 </div>
 
 </div>
