--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13563,7 +13563,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f70325abbd0&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7fd5fd9791d0&gt;</pre>
 </div>
 
 </div>
@@ -13666,8 +13666,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f703200d610&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f703200d810&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7fd5fdecf5d0&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7fd5fd8fe790&gt;]</pre>
 </div>
 
 </div>
@@ -13716,8 +13716,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f7032797f10&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f70327a4150&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7fd5fe065f50&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7fd5fe0960d0&gt;]</pre>
 </div>
 
 </div>
