--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13563,7 +13563,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f11caf4b410&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f59418b4dd0&gt;</pre>
 </div>
 
 </div>
@@ -13666,8 +13666,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f11cb37e490&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f11cb37e650&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f59418c7490&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f59418c7690&gt;]</pre>
 </div>
 
 </div>
@@ -13716,8 +13716,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f11cb78ed90&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f11cb78ef50&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f5941cd5dd0&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f5941cd5fd0&gt;]</pre>
 </div>
 
 </div>
