--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13563,7 +13563,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f9ea09c0590&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f714c8ac150&gt;</pre>
 </div>
 
 </div>
@@ -13666,8 +13666,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f9ea0bb52d0&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f9ea0bb54d0&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f714ca96510&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f714ca96750&gt;]</pre>
 </div>
 
 </div>
@@ -13716,8 +13716,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f9ea0fc3b90&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f9ea0fc3d90&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f714cea7d90&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f714cea7fd0&gt;]</pre>
 </div>
 
 </div>
