--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13563,7 +13563,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f714c8ac150&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f3e091f10d0&gt;</pre>
 </div>
 
 </div>
@@ -13666,8 +13666,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f714ca96510&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f714ca96750&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f3e09635350&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f3e09635550&gt;]</pre>
 </div>
 
 </div>
@@ -13716,8 +13716,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f714cea7d90&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f714cea7fd0&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f3e09a43c50&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f3e09a43e50&gt;]</pre>
 </div>
 
 </div>
