--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13563,7 +13563,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f90fb054d90&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f064941a5d0&gt;</pre>
 </div>
 
 </div>
@@ -13666,8 +13666,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f90fb2a6290&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f90fb2a6490&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f06495fd710&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f06495fd910&gt;]</pre>
 </div>
 
 </div>
@@ -13716,8 +13716,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f90fb6b3bd0&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f90fb6b3dd0&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f0649a0df90&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f0649a1c1d0&gt;]</pre>
 </div>
 
 </div>
