--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13563,7 +13563,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f064941a5d0&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f61d1427290&gt;</pre>
 </div>
 
 </div>
@@ -13666,8 +13666,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f06495fd710&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f06495fd910&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f61d14600d0&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f61d0ed55d0&gt;]</pre>
 </div>
 
 </div>
@@ -13716,8 +13716,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f0649a0df90&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f0649a1c1d0&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f61d1620cd0&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f61d15f9310&gt;]</pre>
 </div>
 
 </div>
