--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13563,7 +13563,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f9c4b370cd0&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f8978c34090&gt;</pre>
 </div>
 
 </div>
@@ -13666,8 +13666,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f9c4b4386d0&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f9c4b4388d0&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f8978e14310&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f8978e14510&gt;]</pre>
 </div>
 
 </div>
@@ -13716,8 +13716,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f9c4bbc3fd0&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f9c4bbd1210&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f8979220cd0&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f8979220ed0&gt;]</pre>
 </div>
 
 </div>
