--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13563,7 +13563,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f8978c34090&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f0127fd4d10&gt;</pre>
 </div>
 
 </div>
@@ -13666,8 +13666,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f8978e14310&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f8978e14510&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f0127f5c490&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f0127f5c690&gt;]</pre>
 </div>
 
 </div>
@@ -13716,8 +13716,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f8979220cd0&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f8979220ed0&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f01286e6d90&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f01286e6f90&gt;]</pre>
 </div>
 
 </div>
