--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13563,7 +13563,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7ff1fd5e20d0&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7fec753f7ad0&gt;</pre>
 </div>
 
 </div>
@@ -13666,8 +13666,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7ff1d39642d0&gt;,
- &lt;matplotlib.lines.Line2D at 0x7ff1d39644d0&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7fec752e2690&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7fec752e2890&gt;]</pre>
 </div>
 
 </div>
@@ -13716,8 +13716,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7ff1d3d73c10&gt;,
- &lt;matplotlib.lines.Line2D at 0x7ff1d3d73e10&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7fec75a6cf90&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7fec75a7b1d0&gt;]</pre>
 </div>
 
 </div>
