--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13563,7 +13563,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f11c9d00ed0&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f106b6f7950&gt;</pre>
 </div>
 
 </div>
@@ -13666,8 +13666,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f11c8c9e350&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f11c8c9e150&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f106b5496d0&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f106b5498d0&gt;]</pre>
 </div>
 
 </div>
@@ -13716,8 +13716,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f11c9429bd0&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f11c94299d0&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f106bce2110&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f106bce2310&gt;]</pre>
 </div>
 
 </div>
