--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13563,7 +13563,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7fec03de0c10&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f210feb7690&gt;</pre>
 </div>
 
 </div>
@@ -13666,8 +13666,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7fec03d12550&gt;,
- &lt;matplotlib.lines.Line2D at 0x7fec03d12750&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f210eea0350&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f210eea0550&gt;]</pre>
 </div>
 
 </div>
@@ -13716,8 +13716,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7fec0449ce10&gt;,
- &lt;matplotlib.lines.Line2D at 0x7fec0449cfd0&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f210f5edbd0&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f210f5eddd0&gt;]</pre>
 </div>
 
 </div>
