--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13563,7 +13563,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f9a439caed0&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f0ab4915150&gt;</pre>
 </div>
 
 </div>
@@ -13666,8 +13666,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f9a4386d5d0&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f9a4386d7d0&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f0ab483d510&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f0ab483d710&gt;]</pre>
 </div>
 
 </div>
@@ -13716,8 +13716,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f9a43ff6f90&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f9a440051d0&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f0ab4fc7d90&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f0ab4fc7f90&gt;]</pre>
 </div>
 
 </div>
