--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13563,7 +13563,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7efe7aa43c90&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f4fa43fe690&gt;</pre>
 </div>
 
 </div>
@@ -13666,8 +13666,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7efe7a91a410&gt;,
- &lt;matplotlib.lines.Line2D at 0x7efe7a91a610&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f4fa42d2410&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f4fa42d2610&gt;]</pre>
 </div>
 
 </div>
@@ -13716,8 +13716,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7efe7b0a4d50&gt;,
- &lt;matplotlib.lines.Line2D at 0x7efe7b0a4f50&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f4fa4a5ec90&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f4fa4a5ee90&gt;]</pre>
 </div>
 
 </div>
