--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13563,7 +13563,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7fbe184f0150&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f246fed2a90&gt;</pre>
 </div>
 
 </div>
@@ -13666,8 +13666,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7fbe185ae350&gt;,
- &lt;matplotlib.lines.Line2D at 0x7fbe185ae550&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f246ff995d0&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f246ff997d0&gt;]</pre>
 </div>
 
 </div>
@@ -13716,8 +13716,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7fbe18d39d10&gt;,
- &lt;matplotlib.lines.Line2D at 0x7fbe18d39f10&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f2470724f10&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f2470732150&gt;]</pre>
 </div>
 
 </div>
